# proton-loan-airdrop

./: .clang-format  CMakeLists.txt  README.md  build.sh  commands.sh
contract/atom/: atom.abi  atom.wasm
contract/atom/ricardian/: atom.contracts.md
contract/atom/src/: atom.cpp
deployment/: README.md  eosiac.yml
deployment/actions/stakerewards/: _init.js
deployment/actions/tokens/: _init.js
deployment/actions/user/: _init.js  _transfer.js  claim.js  deposit-stake.js
eosio.token/src/: eosio.token.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: constants.js
frontend/src/api/: user.js
js_tests/: hydra.yml  package-lock.json  package.json
js_tests/tests/: helpers.js  rewards.test.js
rewards/: CMakeLists.txt  rewards.abi  rewards.wasm
rewards/src/: rewards.cpp  transfer.cpp
server/: README.md  loan-outputs-loop.config.js  package-lock.json  package.json
server/src/: constants.ts  index.ts  parsers.ts
token-contract/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eosio.token.wasm  package-lock.json  package.json  tsconfig.json
token-contract/assembly/: blocklist.abi  blocklist.wasm
token-contract/atom/: CMakeCache.txt  CMakeLists.txt  eosio.token.abi  eosio.token.wasm
token-contract/atom-prefix/tmp/: atom-cfgcmd.txt
token-contract/atom/include/blacklist/: tables.hpp
token-contract/atom/include/blocklist/: tables.hpp
token-contract/atom/include/eosio.token/: eosio.token.hpp
token-contract/atom/src/: eosio.token.cpp
token-contract/tests/: token.spec.ts
(+27 files in other folders)
